syntax = "proto3";
package DomainServices.CaseService;
option csharp_namespace = "DomainServices.CaseService.Contracts";

message LinkOwnerToCaseRequest {
	int64 CaseId = 1;
	int32 UserId = 2;
}
